fix(QTable): grid mode border color when on dark mode #5392

--- a/ui/src/components/table/QTable.sass
+++ b/ui/src/components/table/QTable.sass
@@ -239,6 +239,7 @@
 .q-table__card--dark
   color: #fff
   background: $grey-9
+  border-color: $separator-dark-color
 
 .q-table--dark
   border-color: $separator-dark-color
